Platformer is now working as intended

--- a/platformer/index.html
+++ b/platformer/index.html
@@ -2,6 +2,12 @@
 	<head>
 		<script src='phaser.min.js'></script>
 		<script src='game.js'></script>
+		<style>
+			canvas {
+	   			display : block;
+	   			margin : auto;
+			}
+		</style>
 	</head>
 
 	<body>
